--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "neos/neos": "*"
+        "neos/neos": ">=8.0 || dev-master"
     },
     "autoload": {
         "psr-4": {
