FEATURE: Make compatible with neos-9 and the event-sourced CR

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "neos/neos": ">=8.0 || dev-master"
+        "neos/neos": "^9.0"
     },
     "suggest": {
         "sitegeist/kaleidoscope": "Needed to support AssetImageSource property"
